tests/src/type-error/if-branches.stau
main = if True then 2 else False

